# shutri

./: .gitignore  404.html  CNAME  Cargo.toml  DEFECT_TRACKER.md  GEMINI.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  README.md  SMS_FULL_PIPELINE.json  VIBE_METHODOLOGY.html  about.html  book.toml  change_tracker.md  conversation_log.md  gita.code-workspace  index.html  index.md  manifest.json  manifest.webmanifest  print.html  readme.md  robots.txt  searchindex.js  searchindex.json  service-worker.js  shutri.html  start_n8n.sh  style.css  sw.js  tech-specs.md
.well-known/: nostr.json
PROJECT_ARTIFACTS/: CHANGE_TRACKER.md  DEFECT_TRACKER.md  KNOWLEDGE_BASE.md  TECH_SPECS.md  TESTPLAN_MILESTONE2.md  TESTPLAN_MILESTONE3.md  TESTPLAN_MILESTONE4.md  VIBE_METHODOLOGY.html  VIBE_METHODOLOGY.md
journals/: 2022_10_02.md  2022_10_03.md
logseq/: config.edn  pages-metadata.edn
nostr/: 404.html  index.html  manifest.webmanifest
pages/: Logseq.md
src/: Read@louds.md  SUMMARY.md  about.md  audio.rs  cli.rs  config.rs  core.rs  dimensions.md  main.rs  massage.rs  project.rs  publish.rs  shutri.md  smarterContract.md  stableCoins.md  threeFriends.md  transcription.rs
src/journals/: 2022_09_30.md  2022_10_01.md  2022_10_02.md  2022_10_03.md  2022_10_04.md  2022_10_05.md  2022_10_06.md  2022_10_07.md  2022_10_08.md  2022_10_10.md
src/logseq/: broken-config.edn  config.edn  pages-metadata.edn
src/pages/: .eth.md  Adivansavatarana Parva continued.md  Bramh-rishi.md  Bramh.md  CBP-tech.md  Dwaipayana.md  FTX.md  GPT3.md  Ganesa.md  Gazal.md  Hath Yoga.md  Kalidasa.md  (+117 more)
(+47 files in other folders)
