[package]
name = "shutri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
serde_json = "1.0.140"
