[package]
name = "sms"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
dirs = "6.0.0"
regex = "1.10.4"
chrono = "0.4.38"
toml = "0.8.12"
